--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "npm run test",
     "start": "DEBUG=express:* node -r dotenv/config .",
     "build-ts": "tsc",
-    "watch-ts": "tsc -w"
+    "watch-ts": "tsc -w",
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "author": "Piotr Morawski",
   "license": "ISC",
