--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,9 @@
     "baseUrl": ".",
     "paths": {
       "*": ["node_modules/*", "src/types/*"]
-    }
+    },
+    "noUnusedLocals": false,      
+    "noUnusedParameters": false, 
   },
   "include": ["src/**/*"]
 }
