--- a/package.json
+++ b/package.json
@@ -21,10 +21,11 @@
     "nodemailer": "^6.2.1"
   },
   "devDependencies": {
-    "@types/node": "^12.0.8",
-    "@types/request": "^2.47.0",
     "@types/body-parser": "^1.17.0",
     "@types/cors": "^2.8.5",
-    "@types/nodemailer": "^6.2.0"
+    "@types/node": "^12.0.8",
+    "@types/nodemailer": "^6.2.0",
+    "@types/request": "^2.47.0",
+    "typescript": "^3.8.3"
   }
 }
